tests/invalid/list_remove_wrong_type/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    xs.remove("bad")


if __name__ == "__main__":
    run_case()
